--- a/Platin_WebAPI/Platin.WebAPI.csproj
+++ b/Platin_WebAPI/Platin.WebAPI.csproj
@@ -151,6 +151,7 @@
     <Compile Include="ViewModels\VendaViewModel.cs" />
     <Compile Include="ViewModels\ItemVendaViewModel.cs" />
     <Compile Include="ViewModels\CupomViewModel.cs" />
+    <None Include="Properties\PublishProfiles\FolderProfile3.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
